ghc-4335c07/testsuite/tests/rename/should_fail/T9177a.hs
module T9177a where

foo3 = bar
foo4 = Fun


